--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -898,7 +898,7 @@
       "metadata": {
         "id": "WO24_zkvieI3"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -970,7 +970,7 @@
       "metadata": {
         "id": "8vrQ0kQNjQqc"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1025,7 +1025,7 @@
       "metadata": {
         "id": "1ggjoNxokfyH"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +1112,7 @@
       "metadata": {
         "id": "hdxtR0eziN_V"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1158,7 +1158,7 @@
       "metadata": {
         "id": "WxIStTI0hwJl"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1248,7 +1248,7 @@
       "metadata": {
         "id": "qb1N73B4jme_"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1308,7 +1308,7 @@
       "metadata": {
         "id": "Yu03L_ARjwfU"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1323,27 +1323,44 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We also modify the self-attention sub-layer in the decoder stack to prevent positions from attending to subsequent positions. This masking, combined with fact that the output embeddings are offset by one position, ensures that the predictions for position $i$ can depend only on the known outputs at positions less than $i$."
+        "The `subsequent_mask` function is a crucial component in the Transformer model, specifically within the decoder. It is designed to prevent positions from \"peeking\" into the future by masking out subsequent positions during the self-attention calculation in the decoder layers. This masking strategy is vital for ensuring that the prediction for a given position in the output sequence can only depend on the known outputs at positions before it, thereby enforcing causality in the model's predictions. Here's an explanation of how the function works and its significance:\n",
+        "\n",
+        "\n",
+        "- **Causality in Decoding**: In the context of sequence generation, causality ensures that the model cannot rely on future tokens when predicting the current token. This is essential for tasks like text generation, where the model generates one token at a time.\n",
+        "\n",
+        "- **Self-Attention Masking**: The Transformer model uses self-attention mechanisms to weigh the importance of different positions in the input data. For the decoder, the `subsequent_mask` is applied to the attention scores before the softmax step, effectively setting the scores for disallowed positions to negative infinity (after applying a log mask). This ensures that these positions do not contribute to the softmax output.\n",
+        "\n",
+        "- **Training vs. Inference**: During training, the Transformer model can process entire sequences in parallel, which greatly improves efficiency. The `subsequent_mask` enables this parallelization by ensuring that the model still respects the sequential nature of the data, even when processing many positions simultaneously. During inference, the model generates one token at a time, and the mask ensures that each prediction only uses appropriate past context."
       ],
       "metadata": {
-        "id": "bJuTCAocnsvB"
+        "id": "6xIK5jD2AoO7"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "def subsequent_mask(size):\n",
-        "    \"Mask out subsequent positions.\"\n",
-        "    attn_shape = (1, size, size)\n",
-        "    subsequent_mask = torch.triu(torch.ones(attn_shape), diagonal=1).type(\n",
-        "        torch.uint8\n",
-        "    )\n",
+        "    \"\"\"\n",
+        "    Creates a mask to prevent attention to subsequent positions.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - size: The size of the sequence (length of the sequence).\n",
+        "\n",
+        "    Returns:\n",
+        "    - A mask tensor of shape (1, size, size) where positions are filled with False (0)\n",
+        "      for allowed attentions and True (1) for positions that should be masked.\n",
+        "      This means that for any given row in the mask, positions to the right\n",
+        "      (i.e., subsequent positions) are masked with True.\n",
+        "    \"\"\"\n",
+        "    # Create a square matrix of size `size` filled with ones on and above the diagonal.\n",
+        "    subsequent_mask = torch.triu(torch.ones((1, size, size)), diagonal=1).type(torch.uint8)\n",
+        "    # Invert the mask: positions with ones become zeros (masked) and vice versa.\n",
         "    return subsequent_mask == 0"
       ],
       "metadata": {
         "id": "Q3n9O22Jn7RU"
       },
-      "execution_count": 66,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -1378,7 +1395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 78,
       "metadata": {
         "id": "R0ijbTIEDOAl"
       },
@@ -1387,29 +1404,41 @@
         "class Transformer(nn.Module):\n",
         "    def __init__(self, src_vocab, tgt_vocab, N=6, d_model=512, d_ff=2048, h=8, dropout=0.1):\n",
         "        super(Transformer, self).__init__()\n",
+        "        # Utility for deep copying modules (used for encoder/decoder layers and components).\n",
         "        c = copy.deepcopy\n",
+        "        # Multi-headed attention mechanism.\n",
         "        attn = MultiHeadedAttention(h, d_model)\n",
+        "        # Position-wise feed-forward network.\n",
         "        ff = PositionwiseFeedForward(d_model, d_ff, dropout)\n",
+        "        # Positional encoding for input sequences.\n",
         "        position = PositionalEncoding(d_model, dropout)\n",
+        "        # Encoder consisting of N layers.\n",
         "        self.encoder = Encoder(EncoderLayer(d_model, c(attn), c(ff), dropout), N)\n",
+        "        # Decoder also consisting of N layers but with its own self-attention mechanism for masked attention.\n",
         "        self.decoder = Decoder(DecoderLayer(d_model, c(attn), c(attn), c(ff), dropout), N)\n",
+        "        # Embedding layers for source and target sequences, with positional encodings added.\n",
         "        self.src_embed = nn.Sequential(Embeddings(d_model, src_vocab), c(position))\n",
         "        self.tgt_embed = nn.Sequential(Embeddings(d_model, tgt_vocab), c(position))\n",
+        "        # Final linear and softmax layer to generate predictions.\n",
         "        self.generator = Generator(d_model, tgt_vocab)\n",
         "\n",
-        "        # Parameter Initialization\n",
+        "        # Initialize parameters with Xavier uniform distribution for better convergence.\n",
         "        for p in self.parameters():\n",
         "            if p.dim() > 1:\n",
         "                nn.init.xavier_uniform_(p)\n",
         "\n",
         "    def forward(self, src, tgt, src_mask, tgt_mask):\n",
+        "        # Encodes the source sequence and then decodes it into the target sequence.\n",
         "        return self.decode(self.encode(src, src_mask), src_mask, tgt, tgt_mask)\n",
         "\n",
         "    def encode(self, src, src_mask):\n",
+        "        # Pass the source sequence and mask through the encoder.\n",
         "        return self.encoder(self.src_embed(src), src_mask)\n",
         "\n",
         "    def decode(self, memory, src_mask, tgt, tgt_mask):\n",
-        "        return self.decoder(self.tgt_embed(tgt), memory, src_mask, tgt_mask)\n"
+        "        # Decode the encoded source sequence (memory) into the target sequence.\n",
+        "        return self.decoder(self.tgt_embed(tgt), memory, src_mask, tgt_mask)\n",
+        "\n"
       ]
     },
     {
@@ -1425,57 +1454,74 @@
       "cell_type": "code",
       "source": [
         "def inference_test():\n",
-        "    # Adjust parameters as needed\n",
+        "    # Initialize an untrained Transformer model with specified parameters.\n",
+        "    # src_vocab and tgt_vocab are set to 11 for demonstration with a small vocabulary.\n",
+        "    # N=2 specifies the number of layers in both the encoder and decoder.\n",
+        "    # d_model=512 defines the size of the embedding vector.\n",
+        "    # d_ff=2048 specifies the size of the feed-forward layer.\n",
+        "    # h=8 defines the number of heads in the multi-head attention mechanisms.\n",
+        "    # dropout=0.1 sets the dropout rate.\n",
         "    test_model = Transformer(src_vocab=11, tgt_vocab=11, N=2, d_model=512, d_ff=2048, h=8, dropout=0.1)\n",
-        "    test_model.eval()\n",
+        "    test_model.eval()  # Set the model to evaluation mode.\n",
+        "\n",
+        "    # Create a source sequence as a LongTensor.\n",
         "    src = torch.LongTensor([[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]])\n",
+        "    # Create a mask for the source sequence (1s indicate valid positions).\n",
         "    src_mask = torch.ones(1, 1, 10)\n",
+        "\n",
+        "    # Encode the source sequence to create a memory representation.\n",
         "    memory = test_model.encode(src, src_mask)\n",
+        "    # Initialize the target sequence with a single zero (start symbol).\n",
         "    ys = torch.zeros(1, 1).type_as(src)\n",
         "\n",
-        "    for i in range(9):\n",
+        "    # Generate a sequence autoregressively, token by token.\n",
+        "    for i in range(9):  # Assume the target sequence length is fixed to 10 for demonstration.\n",
+        "        # Decode the current target sequence ys along with the memory from the encoder.\n",
+        "        # Apply a subsequent mask to ensure predictions only depend on known outputs.\n",
         "        out = test_model.decode(\n",
         "            memory, src_mask, ys, subsequent_mask(ys.size(1)).type_as(src.data)\n",
         "        )\n",
+        "        # Apply the generator to get the log-probabilities of the next token.\n",
         "        prob = test_model.generator(out[:, -1])\n",
+        "        # Select the token with the highest probability as the next token.\n",
         "        _, next_word = torch.max(prob, dim=1)\n",
         "        next_word = next_word.item()\n",
-        "        ys = torch.cat(\n",
-        "            [ys, torch.tensor([[next_word]]).type_as(src.data)], dim=1\n",
-        "        )\n",
+        "        # Append the selected token to the target sequence ys.\n",
+        "        ys = torch.cat([ys, torch.tensor([[next_word]]).type_as(src.data)], dim=1)\n",
         "\n",
+        "    # Print the final generated sequence.\n",
         "    print(\"Example Untrained Model Prediction:\", ys)\n",
         "\n",
         "def run_tests():\n",
+        "    # Run the inference test 10 times to demonstrate the generation process.\n",
         "    for _ in range(10):\n",
         "        inference_test()\n",
         "\n",
-        "# Uncomment to run the test\n",
-        "run_tests()"
+        "run_tests()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6702Kmgk-au",
-        "outputId": "a97bd502-b58c-4eac-9bfb-773c9c56a132"
+        "outputId": "d73b001b-bee4-4bf1-d8e8-59f0ee7a84da"
       },
-      "execution_count": 76,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Example Untrained Model Prediction: tensor([[0, 2, 2, 2, 2, 2, 2, 2, 2, 3]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 1, 1, 1, 0, 6, 7, 5, 6, 1]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 5, 3, 5, 0, 5, 3, 5, 0, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 8, 5, 6, 5, 6, 2, 9, 2, 9]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  7,  3, 10,  3, 10,  7,  8,  3, 10]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 2, 2, 2, 2, 2, 2, 2, 2, 2]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  7,  1,  5,  8, 10,  1,  5,  7,  1]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  4,  2,  8,  4,  2, 10, 10, 10, 10]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 7, 9, 7, 7, 9, 7, 9, 7, 2]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  9,  5,  2, 10,  2, 10,  9,  5,  9]])\n"
+            "Example Untrained Model Prediction: tensor([[0, 3, 5, 8, 7, 2, 7, 2, 7, 2]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 7, 4, 4, 4, 4, 4, 4, 4, 4]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 8, 8, 8, 8, 8, 8, 8, 2, 2]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0,  2,  8,  1,  0, 10,  8,  1,  0,  2]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 6, 6, 1, 1, 1, 1, 1, 1, 1]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 3, 3, 3, 3, 3]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 0, 0, 5, 9, 9, 9, 9, 9, 9]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0,  4,  7,  2,  4,  7, 10,  7,  7,  7]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 1, 1, 1, 1, 1, 1, 1, 1, 1]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 1, 5, 2, 3, 9, 3, 9, 3, 9]])\n"
           ]
         }
       ]
