--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -1972,7 +1972,7 @@
         "\n",
         "    return chart\n",
         "\n",
-        "visualize_label_smoothing_comparison().display()\n"
+        "visualize_label_smoothing_comparison()\n"
       ],
       "metadata": {
         "colab": {
@@ -1980,22 +1980,22 @@
           "height": 357
         },
         "id": "HmkL6TH6llwO",
-        "outputId": "7be935e3-27a8-47fa-c794-e7b30f68e959"
+        "outputId": "52e6c0b5-3a3b-4b2b-bc34-4fb87ae1e914"
       },
-      "execution_count": 51,
+      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "display_data",
+          "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "<div id=\"altair-viz-f8170d4a944d4eedbf725ab404613fb2\"></div>\n",
+              "<div id=\"altair-viz-3946c8f8d2614066a2054c7fcf6d49a0\"></div>\n",
               "<script type=\"text/javascript\">\n",
               "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
               "  (function(spec, embedOpt){\n",
               "    let outputDiv = document.currentScript.previousElementSibling;\n",
-              "    if (outputDiv.id !== \"altair-viz-f8170d4a944d4eedbf725ab404613fb2\") {\n",
-              "      outputDiv = document.getElementById(\"altair-viz-f8170d4a944d4eedbf725ab404613fb2\");\n",
+              "    if (outputDiv.id !== \"altair-viz-3946c8f8d2614066a2054c7fcf6d49a0\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-3946c8f8d2614066a2054c7fcf6d49a0\");\n",
               "    }\n",
               "    const paths = {\n",
               "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -2048,7 +2048,8 @@
               "alt.Chart(...)"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "execution_count": 52
         }
       ]
     },
