--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -271,7 +271,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d58a1a39-4767-4894-a175-64a5f6a7e04c"
+        "outputId": "4e2a23f0-11d5-498c-ab60-0b0d7ba59919"
       },
       "outputs": [
         {
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 29,
       "metadata": {
         "id": "49ToAoDBCFLR"
       },
@@ -427,13 +427,15 @@
         "from torch.nn.functional import pad\n",
         "from torch.nn.utils.rnn import pad_sequence\n",
         "from torch.optim import Adam\n",
+        "from torch.optim.lr_scheduler import LambdaLR\n",
         "from torch.utils.data import DataLoader, Dataset\n",
         "\n",
         "from torchtext.datasets import Multi30k\n",
         "from torchtext.data.utils import get_tokenizer\n",
         "from torchtext.vocab import build_vocab_from_iterator\n",
         "\n",
-        "import altair as alt\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import spacy\n",
         "\n",
@@ -455,7 +457,7 @@
       ],
       "metadata": {
         "id": "pqsjolHMbEC4",
-        "outputId": "c8ffcda7-3d39-4613-fc2e-669bdc2e41eb",
+        "outputId": "46ef03d8-72cc-4d5b-9265-c82db87f5d79",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -466,7 +468,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "cuda\n"
+            "cpu\n"
           ]
         }
       ]
@@ -486,12 +488,24 @@
         "# Helper function to produce N identical layers\n",
         "def clones(module, N):\n",
         "  \"Produce N identical layers.\"\n",
-        "  return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])"
+        "  return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])\n",
+        "\n",
+        "# Helper function to calculate the learning rate adaptively\n",
+        "def calculate_learning_rate(step, model_size, factor, warmup):\n",
+        "  \"\"\"\n",
+        "  It is changed the step 0 to 1 for LambdaLR function\n",
+        "  to avoid 0 raising to negative power.\n",
+        "  \"\"\"\n",
+        "  if step == 0:\n",
+        "      step = 1\n",
+        "  return factor * (\n",
+        "      model_size ** (-0.5) * min(step ** (-0.5), step * warmup ** (-1.5))\n",
+        "  )"
       ],
       "metadata": {
         "id": "YKKM9QA6H2ue"
       },
-      "execution_count": 4,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1589,7 +1603,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6702Kmgk-au",
-        "outputId": "a2a4062b-0068-458c-ba58-8300e307039c"
+        "outputId": "6e6bdcc2-314b-4deb-cafd-21f02a0f7214"
       },
       "execution_count": 19,
       "outputs": [
@@ -1597,16 +1611,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n",
-            "Example Untrained Model Prediction: tensor([[1, 7, 7, 6, 0, 0, 0, 7, 7, 6]], device='cuda:0')\n"
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[1, 0, 4, 0, 2, 6, 2, 6, 2, 6]])\n"
           ]
         }
       ]
@@ -1671,7 +1685,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aqQycHlWOJFW",
-        "outputId": "9c940569-d0ec-40e7-d071-d15107fdf885"
+        "outputId": "b7361a41-90e0-41cb-f09f-5771839f0346"
       },
       "execution_count": 22,
       "outputs": [
@@ -1679,14 +1693,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m17.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m32.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the package via spacy.load('en_core_web_sm')\n",
             "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
             "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
             "order to load all the package's dependencies. You can do this by selecting the\n",
             "'Restart kernel' or 'Restart runtime' option.\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m36.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m42.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the package via spacy.load('de_core_news_sm')\n",
             "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
@@ -1782,7 +1796,7 @@
       "metadata": {
         "id": "OjoKjYJAUBiL"
       },
-      "execution_count": 35,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1918,7 +1932,7 @@
       "metadata": {
         "id": "_OhjVyCwkeoo"
       },
-      "execution_count": 49,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1934,9 +1948,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "\n",
         "def visualize_label_smoothing_comparison_matplotlib():\n",
         "    # Create a LabelSmoothing instance\n",
         "    ls = LabelSmoothing(size=5, padding_idx=0, smoothing=0.4)\n",
@@ -1979,9 +1990,9 @@
           "height": 452
         },
         "id": "HmkL6TH6llwO",
-        "outputId": "451c09cd-69bc-4c45-cf57-436a20275966"
+        "outputId": "24177064-2019-40e2-f21e-195bda7343d4"
       },
-      "execution_count": 53,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2050,6 +2061,12 @@
         "    model.train()\n",
         "\n",
         "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
+        "    lr_scheduler = LambdaLR(\n",
+        "        optimizer=optimizer,\n",
+        "        lr_lambda=lambda step: calculate_learning_rate(\n",
+        "            step, model.src_embed[0].d_model, factor=1, warmup=400\n",
+        "        ),\n",
+        "    )\n",
         "    ls = LabelSmoothing(size=len(tgt_vocab), padding_idx=tgt_vocab[\"<pad>\"], smoothing=0.1)\n",
         "    criterion = SimpleLossCompute(model.generator, ls)\n",
         "\n",
@@ -2075,6 +2092,7 @@
         "            loss.backward()\n",
         "\n",
         "            optimizer.step()\n",
+        "            lr_scheduler.step()\n",
         "\n",
         "            total_loss += loss.item()\n",
         "\n",
@@ -2099,51 +2117,22 @@
       ],
       "metadata": {
         "id": "ZoYWz_6tQdYg",
-        "outputId": "f2dfc69d-045c-4b65-995d-d9caf6add39b",
+        "outputId": "b1879bd7-cc27-4019-bee4-39e4f955cfb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 831
+          "height": 420
         }
       },
-      "execution_count": 50,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-35-b5e5bfa8f997>:68: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "<ipython-input-23-b5e5bfa8f997>:68: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  src_batch = [torch.tensor(src, dtype=torch.long) for src in src_batch]\n",
-            "<ipython-input-35-b5e5bfa8f997>:69: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "<ipython-input-23-b5e5bfa8f997>:69: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  tgt_batch = [torch.tensor(tgt, dtype=torch.long) for tgt in tgt_batch]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 0, Batch 100, Loss: 2.3667831420898438\n",
-            "Epoch 0, Batch 200, Loss: 2.31500244140625\n",
-            "Epoch 0, Batch 300, Loss: 2.6485157012939453\n",
-            "Epoch 0, Batch 400, Loss: 1.51861572265625\n",
-            "Epoch 0, Batch 500, Loss: 2.3471176624298096\n",
-            "Epoch 0, Batch 600, Loss: 1.773337721824646\n",
-            "Epoch 0, Batch 700, Loss: 1.9889150857925415\n",
-            "Epoch 0, Batch 800, Loss: 1.722017526626587\n",
-            "Epoch 0, Batch 900, Loss: 2.620107889175415\n",
-            "Epoch 0, Average Loss: 2.1837445388303425\n",
-            "Saving new best model with average loss 2.1837445388303425\n",
-            "Epoch 1, Batch 100, Loss: 2.2626073360443115\n",
-            "Epoch 1, Batch 200, Loss: 1.7445886135101318\n",
-            "Epoch 1, Batch 300, Loss: 2.1010706424713135\n",
-            "Epoch 1, Batch 400, Loss: 1.8307520151138306\n",
-            "Epoch 1, Batch 500, Loss: 1.6377063989639282\n",
-            "Epoch 1, Batch 600, Loss: 2.238297700881958\n",
-            "Epoch 1, Batch 700, Loss: 2.1741459369659424\n",
-            "Epoch 1, Batch 800, Loss: 2.201617479324341\n",
-            "Epoch 1, Batch 900, Loss: 2.194780111312866\n",
-            "Epoch 1, Average Loss: 1.9743952072219344\n",
-            "Saving new best model with average loss 1.9743952072219344\n",
-            "Epoch 2, Batch 100, Loss: 2.335838794708252\n"
           ]
         },
         {
@@ -2153,8 +2142,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-50-95ce6e6248e0>\u001b[0m in \u001b[0;36m<cell line: 52>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;31m# Usage example assuming model, data_loader, tgt_vocab are defined:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m \u001b[0mtrain_transformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformer_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtgt_vocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'best_transformer_model.pth'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-50-95ce6e6248e0>\u001b[0m in \u001b[0;36mtrain_transformer\u001b[0;34m(model, data_loader, tgt_vocab, num_epochs, learning_rate, save_path)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtgt_output_flat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-33-2bcfa2aa0740>\u001b[0m in \u001b[0;36m<cell line: 57>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;31m# Usage example assuming model, data_loader, tgt_vocab are defined:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m \u001b[0mtrain_transformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformer_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtgt_vocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'best_transformer_model.pth'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-33-2bcfa2aa0740>\u001b[0m in \u001b[0;36mtrain_transformer\u001b[0;34m(model, data_loader, tgt_vocab, num_epochs, learning_rate, save_path)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtgt_output_flat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    520\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    521\u001b[0m             )\n\u001b[0;32m--> 522\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    523\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    524\u001b[0m         )\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    264\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    265\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 266\u001b[0;31m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    267\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
