--- a/Neural_Machine_Translation_with_RNNs/Neural_Machine_Translation.ipynb
+++ b/Neural_Machine_Translation_with_RNNs/Neural_Machine_Translation.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\n",
+    "\\begin{array}{c}\n",
+    "\\text{$\\Large We\\ must\\ cultivate\\ our\\ garden.$} \\\\\n",
+    "{\\text{$\\small Voltaire\\ -\\ Candide$}} \\\\\n",
+    "\\end{array}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Neural Machine Translation with Recurrent Neural Networks"
    ]
   },
