Fine Tuning added to NLP repo

--- a/Fine_Tuning/02_LoRA.ipynb
+++ b/Fine_Tuning/02_LoRA.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/arkeodev/nlp/blob/main/Fine_Tuning/02_LoRA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -199,21 +199,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "uCru__RLnzyt",
-        "outputId": "5a74ee0e-1a80-45df-fbb0-da2bfcd77f8b",
         "colab": {
           "referenced_widgets": [
             "2668011214544690b2bfd1d9796c0da4"
           ]
-        }
+        },
+        "id": "uCru__RLnzyt",
+        "outputId": "5a74ee0e-1a80-45df-fbb0-da2bfcd77f8b"
       },
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2668011214544690b2bfd1d9796c0da4",
+              "model_id": "79f4603a341049a79cf9ead4a7cca2d8",
               "version_major": 2,
               "version_minor": 0
             },
@@ -235,13 +235,6 @@
       "source": [
         "# Install the kaggle package\n",
         "! pip install kaggle -q\n",
-        "\n",
-        "# Navigate to the root\n",
-        "import os\n",
-        "import sys\n",
-        "repo_root = os.path.abspath('..')\n",
-        "if repo_root not in sys.path:\n",
-        "    sys.path.insert(0, repo_root)\n",
         "\n",
         "# Import the setup function from helpers.py\n",
         "from helpers.helpers import create_upload_widget\n",
@@ -364,8 +357,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tbTopTbonzyw",
-        "outputId": "af93f64f-3f41-437c-e943-14fbb4ff5453",
         "colab": {
           "referenced_widgets": [
             "63988d43ccaa4bbc98da4c9e9fc5c47e",
@@ -373,7 +364,9 @@
             "2aec22b2ef0f42f9beb7b5aaa2e440a0",
             "0c4d5ff19a5e4d45ac169aa0318e222f"
           ]
-        }
+        },
+        "id": "tbTopTbonzyw",
+        "outputId": "af93f64f-3f41-437c-e943-14fbb4ff5453"
       },
       "outputs": [
         {
@@ -596,13 +589,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "JKp6zPv5nzyx",
-        "outputId": "a0ab4e73-bfc1-42d3-fcce-1a21eea46900",
         "colab": {
           "referenced_widgets": [
             "b43d6d2b3b6b4bf6b2f62d5fa25f362a"
           ]
-        }
+        },
+        "id": "JKp6zPv5nzyx",
+        "outputId": "a0ab4e73-bfc1-42d3-fcce-1a21eea46900"
       },
       "outputs": [
         {
@@ -745,6 +738,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "huggingface",
       "language": "python",
@@ -761,10 +758,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.7"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
